.happypack/s--1191277512
SyntaxError: Adjacent JSX elements must be wrapped in an enclosing tag (58:198)

[0m [90m 56 | [39m          [33m<[39m[33mRow[39m className[33m=[39m[32m"animated fadeIn"[39m[33m>[39m
 [90m 57 | [39m            [33m<[39m[33mCol[39m xs[33m=[39m{[35m12[39m} lg[33m=[39m{[35m12[39m}[33m>[39m
[31m[1m>[22m[39m[90m 58 | [39m              {[36mthis[39m[33m.[39mstate[33m.[39mfileComplete [33m&&[39m [33m<[39m[33mFileHeader[39m title[33m=[39m{[36mthis[39m[33m.[39mstate[33m.[39mfileComplete[33m.[39mtaxonRecordNameApprovedInUse[33m.[39mtaxonRecordName[33m.[39mscientificName[33m.[39mcanonicalName[33m.[39msimple} subtitle[33m=[39m{[32m'Bechstein, 1793'[39m}[33m/[39m[33m>[39m [33m<[39m [33mFileTab[39m name [33m=[39m [32m'summary'[39m id [33m=[39m {
 [90m    | [39m                                                                                                                                                                                                      [31m[1m^[22m[39m
 [90m 59 | [39m                [36mthis[39m[33m.[39mstate[33m.[39mid
 [90m 60 | [39m              }
 [90m 61 | [39m              content [33m=[39m { [33m<[39m [33mFileSummary[39m data [33m=[39m {[0m

BabelLoaderError: SyntaxError: Adjacent JSX elements must be wrapped in an enclosing tag (58:198)

[0m [90m 56 | [39m          [33m<[39m[33mRow[39m className[33m=[39m[32m"animated fadeIn"[39m[33m>[39m
 [90m 57 | [39m            [33m<[39m[33mCol[39m xs[33m=[39m{[35m12[39m} lg[33m=[39m{[35m12[39m}[33m>[39m
[31m[1m>[22m[39m[90m 58 | [39m              {[36mthis[39m[33m.[39mstate[33m.[39mfileComplete [33m&&[39m [33m<[39m[33mFileHeader[39m title[33m=[39m{[36mthis[39m[33m.[39mstate[33m.[39mfileComplete[33m.[39mtaxonRecordNameApprovedInUse[33m.[39mtaxonRecordName[33m.[39mscientificName[33m.[39mcanonicalName[33m.[39msimple} subtitle[33m=[39m{[32m'Bechstein, 1793'[39m}[33m/[39m[33m>[39m [33m<[39m [33mFileTab[39m name [33m=[39m [32m'summary'[39m id [33m=[39m {
 [90m    | [39m                                                                                                                                                                                                      [31m[1m^[22m[39m
 [90m 59 | [39m                [36mthis[39m[33m.[39mstate[33m.[39mid
 [90m 60 | [39m              }
 [90m 61 | [39m              content [33m=[39m { [33m<[39m [33mFileSummary[39m data [33m=[39m {[0m

    at transpile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:63:13)
    at Object.module.exports (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:163:20)
    at applySyncOrAsync (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyWorker.js:32:3)
    at Object.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyForegroundThreadPool.js:61:14)
    at HappyPlugin.compileAndUpdateCache (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyPlugin.js:344:14)
    at HappyPlugin.compileInForeground (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyPlugin.js:321:25)
    at HappyPlugin.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyPlugin.js:237:32)
    at Object.HappyLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyLoader.js:42:15)
    at LOADER_EXECUTION (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/loader-runner/lib/LoaderRunner.js:119:14)